<resources>
    <string name="app_name">大社区</string>
    <string name="patrol_manage_empty_hint">您还没有房屋哦,请添加房屋哦!</string>
    <string name="patrol_manage_add">添加房屋</string>
    <string name="main_bottom_houseKeeper">管家</string>
    <string name="main_bottom_life">生活</string>
    <string name="main_bottom_circle">圈子</string>
    <string name="main_bottom_presenter">我</string>
    <string name="main_presenter_username">八分饱青年PekerMan</string>
    <string name="jk_money">金科币</string>
    <string name="jk_money_center">金科币中心</string>
    <string name="circle_community_events">社区赛事</string>
    <string name="circle_walking_competition_events">健步大比拼</string>
    <string name="circle_name">八分饱青年PekerMan</string>
    <string name="circle_today_walking_num">您在金科\n全国1500000业主中排名</string>
    <string name="open_door_success">开门成功，欢迎回家</string>
    <string name="lock_opening">开门中，请稍后</string>
    <string name="open_fail_warm">开门失败</string>
    <string name="open_fail_hint">请靠近设备后再试</string>
    <string name="dome_shut">关闭</string>
    <string name="net_error">网络连接失败，请检查您的网络!</string>
    <string name="expand">阅读全文</string>
    <string name="collapse">收起</string>
    <string name="empty"/>
    <string name="range">今日步数</string>
    <string name="thank">请您为这次服务评分\n谢谢！</string>
    <string name="main_presenter_balance">预存余额</string>
    <string name="main_presenter_car">卡券</string>
    <string name="main_presenter_add_info">请完善资料</string>
    <string name="main_presenter_my_home">我的魅力家</string>
    <string name="main_present_wisdom_life">智慧生活 为您开启</string>
    <string name="main_present_vehicle_my">我的车辆</string>
    <string name="main_present_attention_vehicle">车库锁车 访客授权</string>
    <string name="main_present_heath_my">我的健康</string>
    <string name="main_present_attention_heath">关注健康 关注生命</string>
    <string name="main_present_my_order">我的订单</string>
    <string name="main_present_address">收货地址</string>
    <string name="main_present_shopping_car">购物车</string>
    <string name="main_present_life_record">生活服务记录</string>
    <string name="main_present_real_pay">物业缴费记录</string>
    <string name="main_present_real_news">物业报事记录</string>
    <string name="main_present_app_spread">APP下载推广码</string>
    <string name="main_present_offer">意见建议</string>
    <string name="main_present_probles">常见问题</string>
    <string name="main_present_clear">清理缓存</string>
    <string name="main_present_service_hot_line">客户热线</string>
    <string name="main_present_version">当前版本v1.0.0</string>
    <string name="main_present_set">设置</string>
    <string name="main_present_versions">当前版本v</string>
    <string name="main_present_login_out">退出登录</string>
    <string name="main_present_official_server">切换到正式服务器</string>
    <string name="main_present_test_server">切换到测试服务器</string>
    <string name="main_present_visitor_video_access">访客视频门禁</string>
    <string name="house_present_setting">当前房屋</string>
    <string name="house_add">添加房屋</string>
    <string name="house_my_title">我的房屋</string>
    <string name="house_empty">小金妹等你好久了,快来绑定房屋吧！</string>
    <string name="payment_lave_money">余额</string>
    <string name="payment_tx_property_payment">物业费</string>
    <string name="payment_tx_monthly_parking_fee">月租车位费</string>
    <string name="payment_tx_parking_fee">月租充值</string>
    <string name="payment_tx_parking_fee_description">查看月租到期时间，续租车位</string>
    <string name="payment_payment_property_payment">物业缴费</string>
    <string name="payment_payment_record">缴费记录</string>
    <string name="payment_address">重庆  金科云湖天都4-1214</string>
    <string name="payment_owner">业主：</string>
    <string name="payment_earlier_records">查看更早记录</string>
    <string name="payment_please_select">请选择</string>
    <string name="payment_withholding_search">待缴费查询</string>
    <string name="payment_withholding_costs">代扣费用</string>
    <string name="payment_property_payment">物业缴费</string>
    <string name="payment_withholding_search_description">查看物业账单 微信 支付宝代扣缴费</string>
    <string name="payment_pre_stored_search">预存</string>
    <string name="payment_pre_stored_search_description">预存物业费、查询预存余额</string>
    <string name="payment_pending_search">待缴费查询</string>
    <string name="payment_pending_search_description">查看待缴物业账单，支付宝、微信缴费</string>
    <string name="payment_auto_tips">自动代扣  不再麻烦</string>
    <string name="payment_auto_tips_right_title">即刻生效</string>
    <string name="payment_auto_tips_right">开通服务，立即生效，本次待缴费用立即缴纳。</string>
    <string name="payment_auto_tips_month_title">月中扣费</string>
    <string name="payment_auto_tips_month">每月10日~15日自动扣取当月费用，具体以实时通知为准。</string>
    <string name="payment_auto_tips_close_title">一键解约</string>
    <string name="payment_auto_tips_close">如需解约，可进入代扣管理。一键解约，关闭服务，立即生效。</string>
    <string name="withholding_management">代扣管理</string>
    <string name="withholding_management_description">代扣缴费的查询、签约和解约</string>
    <string name="payment_notes">缴费注意事项</string>
    <string name="payment_total_cost_text">预存余额（元）</string>
    <string name="payment_prepaid_cost_text">预存合计： </string>
    <string name="payment_prepaid_now">立即预存 </string>
    <string name="payment_unit">元</string>
    <string name="payment_property_service_fee">物业服务费</string>
    <string name="payment_water_and_electricity">水电公摊费</string>
    <string name="payment_parking_management_fee">车位管理费</string>
    <string name="payment_lave">剩余</string>
    <string name="payment_recharge">充值</string>
    <string name="payment_tips">请输入充值金额</string>
    <string name="payment_pending_payment_tips">待缴费</string>
    <string name="payment_pending">待缴费</string>
    <string name="payment_total_pending">待缴纳金额合计：</string>
    <string name="payment_payment_now">立即缴费</string>
    <string name="payment_withholding_text1">订单已生成，请核对清楚</string>
    <string name="payment_withholding_text2">网上支付订单等待支付</string>
    <string name="payment_withholding_text3">您共需要支付:</string>
    <string name="payment_we_pay">微信支付</string>
    <string name="payment_ali_pay">支付宝支付</string>
    <string name="payment_pay_tips">每月自动扣款，省心省力</string>
    <string name="payment_failed_tips">支付失败请重新支付</string>
    <string name="payment_success_tips">支付成功</string>
    <string name="payment_failed_forward">重新支付</string>
    <string name="payment_success_forward">缴费记录</string>
    <string name="payment_return_store">返回管家</string>
    <string name="payment_vehicle_in">入账中</string>
    <string name="payment_vehicle_failed">入账失败，请联系物管</string>
    <string name="payment_withholding_please_make_sure">请仔细核对确认</string>
    <string name="payment_withholding_pay_method">支付方式</string>
    <string name="payment_withholding_wechat_withholding">微信代扣</string>
    <string name="payment_withholding_wechat_withholding_tips">每月自动扣款，省心省力</string>
    <string name="payment_withholding_ali_withholding">支付宝代扣</string>
    <string name="payment_withholding_total_money">合计金额：</string>
    <string name="payment_withholding_open_success">签约成功</string>
    <string name="payment_withholding_open_failed">签约失败</string>
    <string name="payment_withholding_open_title">签约</string>
    <string name="payment_phone">400-846-1818</string>
    <string name="payment_tip">如有疑问请拨打客服热线</string>
    <string name="payment_make_sure">确认支付</string>
    <string name="payment_success">支付成功</string>
    <string name="payment_failed">支付失败</string>
    <string name="payment">支付</string>
    <string name="payment_renewal_select_parking_space">选择车位</string>
    <string name="payment_renewal_renewal_parking_space">车位续期</string>
    <string name="payment_renewal_my_vehicle">我的车辆</string>
    <string name="payment_renewal_no_info_tip">暂无月租车位信息\n如需租车位，需要物管处登记哦</string>
    <string name="payment_renewal_recharge">充值</string>
    <string name="payment_renewal_total_in_advance">预存合计：￥0.00</string>
    <string name="payment_renewal_recharge_now">立即充值</string>
    <string name="verification_phone_number">手机号</string>
    <string name="verification_phone_toast">请输入手机号码</string>
    <string name="verification_code">验证码</string>
    <string name="verification_input_sms_code">请输入验证码</string>
    <string name="verification_reappear_send">重新发送</string>
    <string name="verification_user_protocol">用户协议</string>
    <string name="verification_service_provider">一站式美好生活服务提供商</string>
    <string name="verification_copyright">Copyright© 2017金科物业服务集团有限公司</string>
    <string name="verification_next">下一步</string>
    <string name="verification_title">身份认证</string>
    <string name="verification_phone_error_msg">手机号无效</string>
    <string name="add_house_community">小区</string>
    <string name="add_house_relationship">关系</string>
    <string name="add_house_place_chose">请选择</string>
    <string name="add_house_place_userName">姓名</string>
    <string name="add_house_input_userName">请输入已在物业中心登记的姓名</string>
    <string name="add_house_input_phone">请输入已在物业中心登记的手机号码</string>
    <string name="add_house_phone">手机</string>
    <string name="add_house_verification_code">请输入验证码</string>
    <string name="add_house_input_get_verification">获取验证码</string>
    <string name="add_house_verification">验证码</string>
    <string name="add_house_url">绑定房屋遇到问题?</string>
    <string name="add_house_sure">确定</string>
    <string name="add_house_verification_empty">验证码输入有误</string>
    <string name="add_house_phone_empty">业主电话号码输入有误</string>
    <string name="add_house_name_empty">业主姓名输入有误</string>
    <string name="add_house_relationship_empty">请选择与业主的关系</string>
    <string name="select_community_other">选择其他小区</string>
    <string name="select_community_title">选择小区</string>
    <string name="payment_details">缴费明细</string>
    <string name="prepaid_expenses">费用预存</string>
    <string name="authorization_relationship">身份</string>
    <string name="authorization_name">姓名</string>
    <string name="authorization_phone">手机</string>
    <string name="authorization_delete">删除</string>
    <string name="authorization_edit">编辑</string>
    <string name="authorization_add">添加授权</string>
    <string name="authorization_title">授权管理</string>
    <string name="authorization_to">授权给</string>
    <string name="activity_authorization_select_relation">请选择与业主的关系</string>
    <string name="activity_authorization_relation_friend">朋友</string>
    <string name="activity_authorization_relation_family">家人</string>
    <string name="activity_authorization_relation_rental">租赁户</string>
    <string name="activity_authorization_relation_cancel">取消</string>
    <string name="activity_authorization_relation_sure">确定</string>
    <string name="activity_authorization_select">请选择</string>
    <string name="activity_authorization_add_authorized">被授权人</string>
    <string name="activity_authorization_delete_relation">删除授权</string>
    <string name="activity_authorization_delete_relation_tips">确定要删除授权吗？</string>
    <string name="activity_authorization_delete_success">删除成功</string>
    <string name="property_news_title">报事报修</string>
    <string name="property_news_property_tips_top">物业报事：报事、报修、投诉、建议，\n打造24小时的高效服务。</string>
    <string name="property_broken_title">小金妹爆料</string>
    <string name="property_news_broken_tips_top">小金妹爆料台是金科物业集团公众监督平台，\n在这里您可以咨询和爆料小区生活中遇到的问题，\n也可以点赞表扬优质服务和好人好事。</string>
    <string name="broken_history">爆料记录</string>
    <string name="property_title">爆料选择</string>
    <string name="broken_ed_content">请填写您的爆料需求，我们会尽快处理！</string>
    <string name="broken_owner">业主：</string>
    <string name="property_news_ed">请填写您的报事需求，我们会尽快处理！</string>
    <string name="activity_bind_house_sorry">很抱歉</string>
    <string name="activity_bind_house_search_no">没有找到您的房屋</string>
    <string name="activity_bind_house_phone">手机号变更了？</string>
    <string name="activity_bind_house_visitor">我是游客？</string>
    <string name="activity_bind_house_register">还未在物管处登记？</string>
    <string name="activity_bind_house_authorized">房屋租赁，业主未授权？</string>
    <string name="activity_bind_house_contact">我不清楚，联系物业400-846-1818</string>
    <string name="activity_bind_house_select_community">选择小区</string>
</resources>