<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_root"
        android:layout_width="@dimen/base_dimen_600"
        android:layout_height="@dimen/base_dimen_700"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@mipmap/icon_activity_withholding_tips_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/base_dimen_28"
            android:text="@string/payment_auto_tips"
            android:textColor="@color/white"
            android:textSize="@dimen/base_dimen_36"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_operate"
            android:layout_marginBottom="@dimen/base_dimen_10"
            android:layout_marginLeft="@dimen/base_dimen_46"
            android:layout_marginRight="@dimen/base_dimen_46"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/payment_auto_tips_right_title"
                android:textColor="@color/activity_withholding_management_color2"
                android:textSize="@dimen/base_dimen_30"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/base_dimen_20"
                android:gravity="center_horizontal"
                android:text="@string/payment_auto_tips_right"
                android:textColor="@color/activity_withholding_management_color7"
                android:textSize="@dimen/base_dimen_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/payment_auto_tips_month_title"
                android:textColor="@color/activity_withholding_management_color2"
                android:textSize="@dimen/base_dimen_30"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/base_dimen_20"
                android:gravity="center_horizontal"
                android:text="@string/payment_auto_tips_month"
                android:textColor="@color/activity_withholding_management_color7"
                android:textSize="@dimen/base_dimen_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/payment_auto_tips_close_title"
                android:textColor="@color/activity_withholding_management_color2"
                android:textSize="@dimen/base_dimen_30"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/payment_auto_tips_close"
                android:textColor="@color/activity_withholding_management_color7"
                android:textSize="@dimen/base_dimen_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_operate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tx_cancel"
                android:layout_width="@dimen/base_dimen_0"
                android:layout_height="@dimen/base_dimen_96"
                android:layout_weight="1"
                android:gravity="center"
                android:text="知道了"
                android:textColor="@color/activity_authoried_color1"/>

            <TextView
                android:id="@+id/tx_sure"
                android:layout_width="@dimen/base_dimen_0"
                android:layout_height="@dimen/base_dimen_96"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_authorization_relation_sure"
                android:textColor="@color/activity_authoried_color1"
                android:visibility="gone"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>