<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rl_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/translucent"
                android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/base_dimen_600"
        android:layout_height="@dimen/base_dimen_700"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@mipmap/icon_activity_authorized_delete_relation_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/base_dimen_28"
            android:text="@string/activity_authorization_delete_relation"
            android:textColor="@color/white"
            android:textSize="@dimen/base_dimen_36"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_operate"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/base_dimen_140"
            android:text="@string/activity_authorization_delete_relation_tips"
            android:textColor="@color/activity_authoried_color4"
            android:textSize="@dimen/base_dimen_30"/>

        <LinearLayout
            android:id="@+id/ll_operate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tx_cancel"
                android:layout_width="@dimen/base_dimen_0"
                android:layout_height="@dimen/base_dimen_96"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_authorization_relation_cancel"
                android:textColor="@color/activity_authoried_color3"/>

            <TextView
                android:id="@+id/tx_sure"
                android:layout_width="@dimen/base_dimen_0"
                android:layout_height="@dimen/base_dimen_96"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_authorization_relation_sure"
                android:textColor="@color/activity_authoried_color1"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>